--- a/index.html
+++ b/index.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Batabit</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="header_image_logo">
+            <img src="./assets/img/logo.svg" alt="Batatabit logo">
+        </div>
+        <div class="header_tittle_container">
+            <h1>La próxima revolución en el intercamio de criptomonedas.</h1>
+            <p>Batatabit te ayuda a navegar entre los <br>diferentes ´recios y tendencias.</p>
+            <a class="header_button" href="">Conoce nuestros planes <span></span></a>
+        </div>
+    </header>
     <main>
         <section></section>
         <section></section>
