--- a/index.html
+++ b/index.html
@@ -17,12 +17,47 @@
         </div>
         <div class="header_tittle_container">
             <h1>La próxima revolución en el intercamio de criptomonedas.</h1>
-            <p>Batatabit te ayuda a navegar entre los <br>diferentes ´recios y tendencias.</p>
+            <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
             <a class="header_button" href="">Conoce nuestros planes <span></span></a>
         </div>
     </header>
     <main>
-        <section></section>
+        <section class="main_exchange_container">
+            <div class="main_image_bitcoin"></div>
+            <div class="main_information_container">
+                <h2>Visibilizamos todas las tasas de cambio</h2>
+                <p>traemos información en tiempo real de las casas de cambio y las monedasa más importantes del mundo</p>
+            </div>
+            <section class="main_tables_container">
+                <div class="main_currency_table">
+                    <p class="currency_table_tittle">Monedas</p>
+                    <div class="currency_table_container">
+                        <table>
+                            <tr>
+                                <td class="table_top_left">Bitcoin</td>
+                                <td class="table_top_right table_right">$1.96 <span class="trend_down"></span></td>
+                                
+                            </tr>
+                            <tr>
+                                <td >Ethereum</td>
+                                <td class="table_right">$0.07 <span class="trend_up"></span></td>
+                            </tr>
+                            <tr>
+                                <td>Ripple</td>
+                                <td class="table_right">$2.15 <span class="trend_down"></span></td>
+                            </tr>
+                            <tr>
+                                <td class="table_button_left">Stellar</td>
+                                <td class="table_button_right table_right">$4.96 <span class="trend_down"></span></td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="currency_table_date">
+                        <p><b>Acutalizado:</b> 15 de Junio 7:18</p>
+                    </div>
+                </div>
+            </section>
+        </section>
         <section></section>
         <section></section>
         <section></section>
