¨Product detail section finished

--- a/index.html
+++ b/index.html
@@ -58,7 +58,35 @@
                 </div>
             </section>
         </section>
-        <section></section>
+        <section class="main_product_detail">
+            <span class="produc_detail_batata_logo"></span>
+            <div class="product_detail_tittle">
+                <h2>Creamos un producto sin comparación</h2>
+                <p>Confiable y diseñado para su uso ordinario </p>
+            </div>
+            <section class="product_detail_cards_container">
+                <article class="product_detail_card">
+                    <span class="product_detail_card_icon clock"></span>
+                    <p class="product_detail_card_tittle">Tiempo real</p>
+                    <p class="product_detail_card_body">Nuestro API toma informacion minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
+                </article>
+                <article class="product_detail_card">
+                    <span class="product_detail_card_icon eye"></span>
+                    <p class="product_detail_card_tittle">No hay tasas escondidas</p>
+                    <p class="product_detail_card_body">Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
+                </article>
+                <article class="product_detail_card">
+                    <span class="product_detail_card_icon dollar_sign"></span>
+                    <p class="product_detail_card_tittle">Compara monedas</p>
+                    <p class="product_detail_card_body">No más rumores, con Babtabit sabrás el valor real de cada moneda en el mercado actual.</p>
+                </article>
+                <article class="product_detail_card">
+                    <span class="product_detail_card_icon check"></span>
+                    <p class="product_detail_card_tittle">Información confiable</p>
+                    <p class="product_detail_card_body">Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
+                </article>
+            </section>
+        </section>
         <section></section>
         <section></section>
     </main>
