Main and footer done

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="header_tittle_container">
             <h1>La próxima revolución en el intercamio de criptomonedas.</h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
-            <a class="header_button" href="">Conoce nuestros planes <span></span></a>
+            <a class="header_button" href="#plans">Conoce nuestros planes <span></span></a>
         </div>
     </header>
     <main>
@@ -87,9 +87,56 @@
                 </article>
             </section>
         </section>
-        <section></section>
-        <section></section>
+        <section class="bitcoin_img_container">
+            <h2>Conocelo hoy</h2>
+        </section>
+        <section id="plans" class="main_plans_container">
+            <div class="main_plans_tittle">
+                <h2>Escoge el plan que mejor se ajuste a ti.</h2>
+                <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+            </div>
+            <section class="main_plans_conteiner_slider">
+                <article class="main_plans_container_card">
+                    <div class="plan_info_container">
+                        <h3 class="plan_card_tittle">Pago Anual</h3>
+                        <p class="plan_card_price"><span>$</span> 5</p>
+                        <p class="plan_card_saving">* Plan básico para mantenerte informado.</p>
+                        <button class="plan_card_ca">Escoger este <span></span> </button>
+                    </div>
+                </article>
+
+                  <article class="main_plans_container_card">
+                    <p class="recomended" >Recomendado</p>
+                    <div class="plan_info_container">
+                        <h3 class="plan_card_tittle">Pago Anual</h3>
+                        <p class="plan_card_price"><span>$</span> 49</p>
+                        <p class="plan_card_saving">* Ahorra $129 comparado al plan mensual.</p>
+                        <button class="plan_card_ca">Escoger este <span></span> </button>
+                    </div>
+                </article>
+    
+                <article class="main_plans_container_card">
+                    <div class="plan_info_container">
+                        <h3 class="plan_card_tittle">Acceso de por vida</h3>
+                        <p class="plan_card_price"><span>$</span> 99</p>
+                        <p class="plan_card_saving">* Ahorra $999+ comparado al plan mensual.</p>
+                        <button class="plan_card_ca">Escoger este <span></span> </button>
+                    </div>
+                </article>
+            </section>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section class="left">
+            <ul>
+                <li><a href="#">Linkedin</a></li>
+                <li><a href="#">Crunchbase</a></li>
+                <li><a href="#">Hackernews</a></li>
+            </ul>
+        </section>
+        <section class="right">
+            <img src="./assets/img/logo-footer.svg" alt="Logo Batabit">
+        </section>
+    </footer>
 </body>
 </html>
